<resources>
    <string name="app_name">Employee Management System</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="profile">Profile</string>
    <string name="wewill_sendyou_otp">You\'ll receive 4 digit code to verify next.</string>
    <string name="contin">Continue</string>
    <string name="by_continuing_you_agree">By continuing you agree to</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_the_verification_code">"Enter the verification code sent to "</string>
    <string name="resend">Resend OTP</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_chats">Chats</string>
    <string name="string_posters">Posters</string>
    <string name="string_profile">Profile</string>
    <string name="mark_attenndance">Punch</string>
    <string name="enablenotifications">Enable Notifications</string>
    <string name="enable_notifications_toget">Enable notification for real-time updates of your company. Click Allow to give access</string>
    <string name="allow_access">"Allow Access "</string>
    <string name="close">Close</string>
    <string name="request_your_domain_to">Request your admin to register this device</string>
    <string name="send_request">Send Request</string>
    <string name="new_phone_detected">New Phone Detected</string>
    <string name="account_login">Account Login</string>
    <string name="you_will_receive">You\'ll receive 4 digit code to verify next</string>
    <string name="verify">Verify</string>
    <string name="please_enter_valid_number">Please enter a valid mobile number to access your account</string>
    <string name="Settings">Settings</string>
    <string name="ViewAttendance">View Attendance</string>
    <string name="SetAlarm">Set Alarm</string>
    <string name="RequestLeave">Request Leave</string>
    <string name="HolidayList">Holiday List</string>
    <string name="AddBusiness">Add Business</string>
    <string name="MyDocuments">My Documents</string>
    <string name="AttendanceReminder">Attendance Reminder</string>
    <string name="idcard">ID Card</string>
    <string name="basicdetails">Basic Details</string>
    <string name="AttendanceDetails">Attendance Details</string>
    <string name="TimingsWeekOffStaffAttendance">Timings, Week Off, Staff Attendance</string>
    <string name="namebranchjob">Name, Job Title, Branch Location, etc</string>
    <string name="BankDetails">Bank Account Details</string>
    <string name="accountnoname">Account No., Name IFSC etc</string>
    <string name="UserPermissions">User Permissions</string>
    <string name="Employee">Employee</string>
    <string name="attendance">Attendance</string>
    <string name="Enquiry">Enquiry</string>
    <string name="PersonalDetails">Personal Details</string>
    <string name="SaveDetails">Save Details</string>
    <string name="StaffName">Staff Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="ddmmyy">DD/MM/YYYY</string>
    <string name="address">Address</string>
    <string name="email">Email ID</string>
    <string name="adhar">Aadhar Number</string>
    <string name="EmploymentDetails">Employment Details</string>
    <string name="branch">Branch</string>
    <string name="dateofjoining">Date Of Joining</string>
    <string name="employee_id">Employee ID</string>
    <string name="job_title">Job Title</string>
    <string name="BankAccountDetails">Bank Account Details</string>
    <string name="BankName">Bank Name</string>
    <string name="AccountNumber">Account Number</string>
    <string name="IFSCCode">IFSC Code</string>
    <string name="AccountHoldersName">Account Holders Name</string>
    <string name="sharebio">Share IDCard</string>
    <string name="leavehistory">Leave History</string>
    <string name="fromdate">From Date</string>
    <string name="todate">To Date</string>
    <string name="request_halfday">Request leave for half day</string>
    <string name="ReasonofLeave">Reason of Leave</string>
    <string name="AddImage">Add Image</string>
    <string name="attendancefor">Attendance For</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="halfdays">Half Days</string>
    <string name="paidleav">Paid Leaves</string>
    <string name="leavedetails">Leave Details</string>
    <string name="priviezedleave">Privileged Leave</string>
    <string name="requested">Requested</string>
    <string name="adddocument">ADD DOCUMENT</string>
    <string name="nameofthedocument">Name of the Document</string>
    <string name="upload">Upload Document</string>
    <string name="name">Name</string>
    <string name="write_msg">Write your message</string>
    <string name="write_msg_report">Write your report</string>
    <string name="submit">Submit</string>
    <string name="notifications">Notifications</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Capture Video</string>
    <string name="punchin">Punch In Now</string>
    <string name="check_today_notes">Check Today\'s Notes</string>
    <string name="fullday">Full Day</string>
    <string name="double_fullday">Double Present</string>
    <string name="half_day">Half Day</string>
    <string name="day_off">Day Off</string>
    <string name="paid_leave">Paid Leave</string>
    <string name="hald_day_leave">Half Day Leave</string>
    <string name="hald_un_paid_leave">UnPaid Leave</string>
    <string name="punch_in_time">Punch in time - </string>
    <string name="logout">Logout</string>
    <string name="shiftimings">Shift Timings</string>
    <string name="workingdays">Working days</string>
    <string name="work_report">Work Report</string>
    <string name="staff_mark">Staff will mark attendance using smartphone</string>
    <string name="attendance_location">Attendance Location</string>
    <string name="title">Title</string>
    <string name="punch_out_time">"Punch out time - "</string>
    <string name="no_notifications">No Notifications available</string>
</resources>