<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/StaffName"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_staffname"
        style="@style/style_edittext"
        android:background="@drawable/rectangle_edittext_white"
        android:hint="@string/StaffName"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/mobile_number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rectangle_edittext_white"
        >

        <com.hbb20.CountryCodePicker
            app:ccp_defaultNameCode="IND"
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_showFullName="false">
        </com.hbb20.CountryCodePicker>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_12dp"
            android:layout_marginRight="@dimen/_12dp"
            app:dividerColor="@color/color_divider"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_mobile_number"
            style="@style/style_edittext"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            />
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/gender"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:paddingLeft="@dimen/_8dp"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/montserrat_regular"
            />
        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="@dimen/_16dp"
            android:paddingLeft="@dimen/_8dp"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/montserrat_regular"
            />
    </RadioGroup>


    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/dateofbirth"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_dob"
        style="@style/style_edittext"
        android:background="@drawable/rectangle_edittext_white"
        android:hint="@string/ddmmyy"
        android:focusableInTouchMode="false"
        android:clickable="true"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/address"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_address"
        style="@style/style_edittext"
        android:background="@drawable/rectangle_edittext_white"
        android:hint="@string/address"

        />
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/email"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        style="@style/style_edittext"
        android:background="@drawable/rectangle_edittext_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        />
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_12dp"/>
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        style="@style/style_textview"
        android:text="@string/adhar"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_adhar"
        style="@style/style_edittext"
        android:background="@drawable/rectangle_edittext_white"
        android:hint="@string/adhar"
        android:inputType="number"
        android:imeOptions="actionDone"

        />
    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/_20dp"/>

</LinearLayout>