<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    app:contentPadding="@dimen/_10dp"
    android:layout_margin="@dimen/_5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_8dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >
    <com.royalitpark.employeemanagement.customviews.CustomTextView

        style="@style/style_textview"
        android:layout_width="wrap_content"
        android:text="@string/enablenotifications"
        android:textStyle="bold"

        />
    <com.royalitpark.employeemanagement.customviews.CustomTextView
        android:textSize="@dimen/_16sp"
        style="@style/style_textview_small"
        android:layout_width="wrap_content"
        android:text="@string/enable_notifications_toget"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="20dp"/>
    <androidx.appcompat.widget.AppCompatButton android:id="@+id/btn_allow"
        style="@style/style_button"
        android:layout_gravity="center"
        android:text="@string/allow_access"
        android:minEms="7"
        />

    <com.royalitpark.employeemanagement.customviews.CustomTextView
android:id="@+id/txt_close"
        style="@style/style_textview"
        android:layout_width="wrap_content"
        android:text="@string/close"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/color_light"

        />
    </LinearLayout>
</androidx.cardview.widget.CardView>