<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/homeAttendance"
        android:name="com.royalitpark.employeemanagement.ui.dashboard.HomeFragment"
        android:label="@string/mark_attenndance"
        tools:layout="@layout/fragment_home">

        <!--<action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.royalitpark.employeemanagement.ui.dashboard.ChatsFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_chats">

      <!--  <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/postersFragment"
        android:name="com.royalitpark.employeemanagement.ui.dashboard.PostersFragment"
        android:label="@string/Enquiry"
        tools:layout="@layout/fragment_posters">

        <!--  <action
              android:id="@+id/action_SecondFragment_to_FirstFragment"
              app:destination="@id/FirstFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.royalitpark.employeemanagement.ui.dashboard.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <!--  <action
              android:id="@+id/action_SecondFragment_to_FirstFragment"
              app:destination="@id/FirstFragment" />-->
    </fragment>
</navigation>