<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_15dp"
    android:layout_marginRight="@dimen/_15dp"
    android:layout_marginTop="@dimen/_15dp"
    android:layout_marginBottom="@dimen/_15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <com.royalitpark.employeemanagement.customviews.CustomTextView
            style="@style/style_textview"
            android:text="@string/work_report"
            android:textStyle="bold"
            android:minLines="2"
            android:textSize="@dimen/_16sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_margin="@dimen/_0dp"
            android:background="@drawable/rectangle_edittext_bank"
            android:minLines="8"
            android:gravity="top"
            android:padding="@dimen/_12dp"
            android:hint="@string/write_msg_report"/>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/style_button"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:background="@drawable/rectangle_bio_data"
            android:layout_width="match_parent"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>