<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.royalitpark.employeemanagement.ui.dashboard.PostersFragment"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_16dp"
            >

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/_20dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_0dp"
                android:background="@drawable/rectangle_edittext_bank"
                android:gravity="top"
                android:padding="@dimen/_12dp"
                android:hint="@string/title"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="16dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_0dp"
                android:background="@drawable/rectangle_edittext_bank"
                android:minLines="3"
                android:gravity="top"
                android:padding="@dimen/_12dp"
                android:hint="@string/write_msg"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="16dp"/>


        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/style_button"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:background="@drawable/rectangle_bio_data"
        android:layout_width="match_parent"/>

</LinearLayout>