<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:scaleType="centerCrop"
        android:paddingLeft="@dimen/_16dp"
        android:orientation="vertical"
        android:background="@drawable/img_top_gradient"
        >
        <com.royalitpark.employeemanagement.customviews.CustomTextView
            style="@style/style_textview"
            android:text="@string/account_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_26sp"
            android:textStyle="bold"
            />
        <com.royalitpark.employeemanagement.customviews.CustomTextView
            style="@style/style_textview_small"
            android:text="@string/please_enter_valid_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-130dp"
        android:elevation="@dimen/_20dp"
        android:src="@drawable/img_login_logo"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/_16dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rectangle_otp_edittext"
        >
        <ImageView
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:src="@drawable/img_mobile"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_12dp"
            android:layout_marginRight="@dimen/_12dp"
            app:dividerColor="@color/color_divider"
            />
        <com.hbb20.CountryCodePicker
            app:ccp_defaultNameCode="IND"
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_showFullName="false">
        </com.hbb20.CountryCodePicker>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_mobile"
            style="@style/style_edittext"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:imeOptions="actionDone"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sp"
        android:layout_margin="@dimen/_8dp"

        android:text="@string/you_will_receive" />
    <View
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_20dp"/>
    <androidx.appcompat.widget.AppCompatButton style="@style/style_button"
        android:text="@string/contin"
        android:onClick="signin"

        />
    <!--<com.google.android.flexbox.FlexboxLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:flexWrap="wrap">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sp"
            android:layout_marginRight="@dimen/_5dp"
            android:textColor="@color/color_light"
            android:text="@string/by_continuing_you_agree" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sp"
            android:onClick="termsConditions"
            android:text="@string/terms_conditions" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp"
            android:textColor="@color/color_light"
            android:text="@string/and" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sp"
            android:onClick="privacyPolicy"
            android:text="@string/privacy_policy" />
    </com.google.android.flexbox.FlexboxLayout>-->

</LinearLayout>
</LinearLayout>
